# pyonlm

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
benchmarks/: benchmark.py  make_figures.py  make_report.py
docs/: BENCHMARK.md
reference/: README.md  fetch_sources.sh
src/pyonlm/: __init__.py  _onlm.pyx  cli.py  noise.py  onlm.py  reference.py
tests/: test_cli.py  test_noise.py  test_parity.py  test_primitives.py
